# PySuperfish

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  pypi_upload.yml
api/interpolate/: index.html
api/parsers/: index.html
api/plot/: index.html
api/superfish/: index.html
api/types/: index.html
api/writers/: index.html
devel/: devel_superfish.ipynb
docs/: index.md  installation.md  usage.md
docs/api/: interpolate.md  parsers.md  plot.md  superfish.md  types.md  writers.md
docs/examples/: poisson_example.ipynb  superfish_basic_example.ipynb
docs/stylesheets/: extra.css
examples/: T7_fieldmaps.ipynb  fieldmesh.ipynb  poisson_example.ipynb  superfish_basic_example.ipynb
examples/data/: SOLENOID.T7  SWIFEL.T7  SWIFEL1.T7  SWIFEL_OUTSF7.TXT  solenoid.am  swifel_5.0_4.5_36.0_30.0_5.0_2.0_2.0.am  swifel_5.255_8.148_36.000_4.763_8.667_30.000_4.705_2.735_2.000_8607.am  swifel_7.000_9.170_36.000_5.531_9.819_30.000_2.000_5469.am  swifel_7.0_9.0_36.0_30.0_5.0_2.0_2.0_0.am  swifel_7.0_cm_gap_2_cm_pipe.am
examples/poisson_example/: index.html  poisson_example.ipynb
examples/superfish_basic_example/: index.html
installation/: index.html
scripts/: setup_conda_env.sh
search/: search_index.json
superfish/: __init__.py  _version.py  interpolate.py  parsers.py  plot.py  superfish.py  types.py  writers.py
usage/: index.html
