[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pySuperfish"
description = "Python interface to Poisson Superfish"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "openpmd_beamphysics",
]

[project.urls]
Homepage = "https://github.com/ChristopherMayes/PySuperfish"

[tool.setuptools.packages.find]
include = ["superfish*"]

[tool.setuptools_scm]
version_file = "superfish/_version.py"
